--- a/src/main/resources/templates/reporting/table_report_list.vm
+++ b/src/main/resources/templates/reporting/table_report_list.vm
@@ -22,14 +22,14 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
     <table class="aui reporting-table">
       <thead>
         <tr>
-          <th>$i18n.getText("plugin.date")</th>
-          <th>$i18n.getText("plugin.issue")</th>
-          <th>$i18n.getText("plugin.summary")</th>
-          <th title="$i18n.getText('jttp.list.title.remaining')">$i18n.getText("plugin.remaining")</th>
-          <th>$i18n.getText("plugin.start")</th>
-          <th>$i18n.getText("plugin.end")</th>
-          <th>$i18n.getText("plugin.duration")</th>
-          <th colspan="3">$i18n.getText("plugin.note")</th>
+          <th>$i18n.getText("jtrp.table.report.header.date")</th>
+          <th>$i18n.getText("jtrp.table.report.header.issue")</th>
+          <th>$i18n.getText("jtrp.table.report.header.summary")</th>
+          <th title="$i18n.getText('jttp.list.title.remaining')">$i18n.getText("jtrp.table.report.header.remaining")</th>
+          <th>$i18n.getText("jtrp.table.report.header.start")</th>
+          <th>$i18n.getText("jtrp.table.report.header.end")</th>
+          <th>$i18n.getText("jtrp.table.report.header.duration")</th>
+          <th colspan="3">$i18n.getText("jtrp.table.report.header.note")</th>
         </tr>
       </thead>
     #if($worklogs.size() == 0)
